--- a/src/app/features/faenas/components/faena-list/faena-list.html
+++ b/src/app/features/faenas/components/faena-list/faena-list.html
@@ -5,14 +5,14 @@
   >
     <fa-icon [icon]="faClipboardList" class="text-lg md:text-xl"></fa-icon>
   </div>
-  <h2 class="text-lg md:text-xl font-bold font-sans text-gray-800">Detalle de Faena</h2>
+  <h2 class="text-lg md:text-xl font-bold font-sans text-gray-800">Gestion de Menudo</h2>
 </div>
 
 <div class="max-w-full mx-auto p-2 md:p-5 bg-white rounded-2xl shadow-xl">
   <!-- Header con buscador y botón -->
   <div class="flex flex-col lg:flex-row justify-between items-center gap-4 mb-6">
-    <!-- Buscador -->
-    <div class="w-full lg:w-1/3">
+    <div class="w-full lg:w-1/3 space-y-4">
+      <!-- Buscador -->
       <div class="relative">
         <fa-icon
           [icon]="faSearch"
@@ -21,18 +21,44 @@
         <input
           type="text"
           placeholder="Buscar faena..."
-          class="w-full pl-10 pr-4 py-3 border border-gray-200 rounded-xl focus:outline-none focus:ring-2 focus:ring-black-100 focus:border-transparent shadow-sm"
+          class="w-full pl-10 pr-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent shadow-sm transition"
           [(ngModel)]="searchTerm"
         />
+      </div>
+
+      <!-- Filtro por fechas -->
+      <div class="flex flex-col realtive sm:flex-row gap-4 items-end">
+        <div class="flex flex-col">
+          <label class="text-sm font-medium text-gray-700 mb-1">Fecha inicio</label>
+          <input
+            type="date"
+            [(ngModel)]="fechaInicio"
+            class="border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent"
+          />
+        </div>
+        <div class="flex flex-col">
+          <label class="text-sm font-medium text-gray-700 mb-1">Fecha fin</label>
+          <input
+            type="date"
+            [(ngModel)]="fechaFin"
+            class="border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent"
+          />
+        </div>
+        <button
+          (click)="aplicarFiltroFecha()"
+          class="bg-[#ff7676] hover:bg-red-400 text-white font-semibold px-5 py-2 rounded-lg shadow-md transition transform hover:scale-105"
+        >
+          Filtrar
+        </button>
       </div>
     </div>
 
     <!-- Botón nueva faena -->
     <button
-    [routerLink]="['/faenas/crear',compraId()]"
-      class="flex items-center gap-2 bg-gray-400 hover:bg-gray-500 text-white px-6 py-3 rounded-xl shadow-lg transition-all duration-200 transform hover:scale-105 w-full lg:w-auto justify-center lg:justify-start"
+      [routerLink]="['/faenas/crear']"
+      class="flex items-center gap-2 bg-[#ff7676] hover:bg-red-400 text-white px-6 py-3 rounded-xl shadow-lg transition-all duration-200 transform hover:scale-105 w-full lg:w-auto justify-center lg:justify-start"
     >
-      <i class="fas fa-plus"></i> Nueva Faena
+      <i class="fas fa-plus"></i> Nuevo
     </button>
   </div>
 
@@ -93,25 +119,50 @@
               <td class="px-2 xl:px-4 py-4">{{ faena.fecha | date : 'dd/MM/yyyy' }}</td>
               <td class="px-2 xl:px-4 py-4">{{ faena.propiedad }}</td>
               <td class="px-2 xl:px-4 py-4">{{ faena.numeroReses }}</td>
-              <td class="px-2 xl:px-4 py-4">
-                Bs.{{ faena.totalDevolucion | number : '1.2-2' }}
-              </td>
-              <td class="px-2 xl:px-4 py-4">
-                Bs.{{ faena.saldoDepositar |number : '1.2-2' }}
-              </td>
+              <td class="px-2 xl:px-4 py-4">Bs.{{ faena.totalDevolucion | number : '1.2-2' }}</td>
+              <td class="px-2 xl:px-4 py-4">Bs.{{ faena.saldoDepositar | number : '1.2-2' }}</td>
               <td class="px-2 xl:px-4 py-4 flex justify-center gap-2">
+                <!-- Ver Detalle -->
+                <button
+                  class="w-8 h-8 flex items-center justify-center rounded-lg bg-gray-500 hover:bg-gray-600 text-white shadow-md transition transform hover:scale-110"
+                  [routerLink]="['/faenas/detalle', faena.id]"
+                >
+                  <fa-icon [icon]="faEye" class="text-xs"></fa-icon>
+                </button>
+
+                <!-- Editar -->
                 <button
                   class="w-8 h-8 flex items-center justify-center rounded-lg bg-blue-500 hover:bg-blue-600 text-white shadow-md transition transform hover:scale-110"
                   (click)="edit(faena)"
                 >
                   <fa-icon [icon]="faPenToSquare" class="text-xs"></fa-icon>
                 </button>
+
+                <!-- Eliminar -->
                 <button
                   class="w-8 h-8 flex items-center justify-center rounded-lg bg-red-500 hover:bg-red-600 text-white shadow-md transition transform hover:scale-110"
                   (click)="delete(faena)"
                 >
                   <fa-icon [icon]="faTrash" class="text-xs"></fa-icon>
                 </button>
+
+                <!-- Registrar Pago -->
+                <button
+                  class="w-8 h-8 flex items-center justify-center rounded-lg bg-green-500 hover:bg-green-600 text-white shadow-md transition transform hover:scale-110"
+                  (click)="abrirModalPago(faena)"
+                >
+                  <fa-icon [icon]="faMoneyBillWave" class="text-xs"></fa-icon>
+                </button>
+
+                <!-- Anular Pago -->
+                @if (faena?.estadoPago !== 'PAGADO') {
+                <button
+                  class="w-8 h-8 flex items-center justify-center rounded-lg bg-yellow-500 hover:bg-yellow-600 text-white shadow-md transition transform hover:scale-110"
+                  (click)="onMarcarPagado(faena)"
+                >
+                  <fa-icon [icon]="faBan" class="text-xs"></fa-icon>
+                </button>
+                }
               </td>
             </tr>
             } @if (filteredFaenas().length === 0) {
@@ -126,6 +177,17 @@
             </tr>
             }
           </tbody>
+          <tfoot>
+            <tr class="bg-gray-100 font-bold">
+              <td colspan="5" class="px-2 xl:px-4 py-3 text-right">TOTAL Saldo a Depositar:</td>
+              <td class="px-2 xl:px-4 py-3">
+                Bs.
+                {{ getTotalSaldo() | number : '1.2-2' }}
+              </td>
+              <td></td>
+              <!-- columna acciones -->
+            </tr>
+          </tfoot>
         </table>
       </div>
     </div>
@@ -133,13 +195,11 @@
 
   <!-- Vista Mobile/Tablet - Cards -->
   <div class="xl:hidden space-y-4">
-
     @for (faena of filteredFaenas(); track $index) {
-  <div
-    
+    <div
       class="bg-white border border-gray-200 rounded-xl shadow-sm hover:shadow-md transition-all duration-200 overflow-hidden"
     >
-      <div class="bg-[#ff7676]  from-red-400 to-red-300 p-4 flex justify-between items-center">
+      <div class="bg-[#ff7676] from-red-400 to-red-300 p-4 flex justify-between items-center">
         <div>
           <h3 class="font-bold text-white text-lg leading-tight">{{ faena.propiedad }}</h3>
           <p class="text-blue-100 text-sm mt-1">Fecha: {{ faena.fecha | date : 'dd/MM/yyyy' }}</p>
@@ -152,41 +212,66 @@
         <p><strong># Reses:</strong> {{ faena.numeroReses }}</p>
         <p>
           <strong>Total Devolución:</strong>
-          {{ faena.totalDevolucion | currency : 'USD' : 'symbol' }}
+          Bs.{{ faena.totalDevolucion | number : '1.2-2' }}
         </p>
         <p>
           <strong>Saldo a Depositar:</strong>
-          {{ faena.saldoDepositar | currency : 'USD' : 'symbol' }}
+          Bs.{{ faena.saldoDepositar | number : '1.2-2' }}
         </p>
-        <div class="flex gap-2 pt-2 border-t border-gray-100">
+        <div class="flex gap-2 pt-2 border-t border-gray-200">
+          <!-- Ver Detalle -->
           <button
-            class="flex-1 bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-lg"
-            (click)="edit(faena)"
+            class="flex-1 bg-gray-500 hover:bg-gray-600 text-white py-2 rounded-lg shadow-sm transition transform hover:scale-105"
+            [routerLink]="['/faenas/detalle', faena.id]"
+          >
+            Detalle
+          </button>
+
+          <!-- Editar -->
+          <button
+            class="flex-1 bg-blue-500 hover:bg-blue-600 text-white py-2 rounded-lg shadow-sm transition transform hover:scale-105"
+            [routerLink]="['/faenas/editar', faena.id]"
           >
             Editar
           </button>
+
+          <!-- Eliminar -->
           <button
-            class="flex-1 bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg"
+            class="flex-1 bg-red-500 hover:bg-red-600 text-white py-2 rounded-lg shadow-sm transition transform hover:scale-105"
             (click)="delete(faena)"
           >
             Eliminar
           </button>
+
+          <!-- Registrar Pago -->
+          <button
+            class="flex-1 bg-green-500 hover:bg-green-600 text-white py-2 rounded-lg shadow-sm transition transform hover:scale-105"
+            (click)="abrirModalPago(faena)"
+          >
+            Pagar
+          </button>
+
+          <!-- Anular Pago -->
+          @if (faena?.estadoPago !== 'PAGADO') {
+          <button
+            (click)="onMarcarPagado(faena)"
+            class="flex-1 bg-yellow-500 hover:bg-yellow-600 text-white py-2 rounded-lg shadow-sm transition transform hover:scale-105"
+          >
+            Pagar
+          </button>
+          }
         </div>
       </div>
     </div>
-    }
-  
-    @if(filteredFaenas().length === 0){
-   <div class="bg-white rounded-xl p-8 text-center">
+    } @if(filteredFaenas().length === 0){
+    <div class="bg-white rounded-xl p-8 text-center">
       <fa-icon [icon]="faBoxOpen" class="text-5xl text-gray-300 mb-4"></fa-icon>
       <p class="text-lg font-semibold text-gray-700 mb-2">No se encontraron faenas</p>
       <p class="text-sm text-gray-500">Agrega una nueva faena para comenzar</p>
     </div>
     }
- 
   </div>
 
-  <!-- Paginación -->
   <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center mt-6 gap-4 px-2">
     <div class="text-sm text-gray-600 text-center sm:text-left">
       Mostrando {{ rangeStart() }} a {{ rangeEnd() }} de {{ total() }}
@@ -200,8 +285,7 @@
         Anterior
       </button>
       @for (i of pageArray(); track $index) {
-     <button
- 
+      <button
         (click)="goToPage(i)"
         [class.font-bold]="currentPage() === i"
         [class.bg-blue-500]="currentPage() === i"
@@ -211,7 +295,7 @@
         {{ i }}
       </button>
       }
- 
+
       <button
         (click)="nextPage()"
         [disabled]="currentPage() === totalPages()"
@@ -222,3 +306,11 @@
     </div>
   </div>
 </div>
+
+@if (showPagoModal) {
+<app-pago-modal
+  [faenaId]="selectedFaenaId"
+  [cajaId]="cajaIdSignal()"
+  (pagoRegistrado)="onPagoRegistrado()"
+></app-pago-modal>
+}
