--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -31,7 +31,7 @@
         <label
           for="identifier"
           class="block text-sm font-medium text-gray-700 mb-2"
-          >Usuario / Correo</label
+          >Usuario</label
         >
         <div class="relative">
           <fa-icon [icon]="faUser" class="absolute left-3 top-3 text-red-600"></fa-icon>
