--- a/src/app/features/compras/components/compra-list/compra-list.html
+++ b/src/app/features/compras/components/compra-list/compra-list.html
@@ -215,6 +215,8 @@
             <p class="text-xl font-bold text-red-600">
               Bs {{ compra.detalles[0].precioTotal | number : '1.2-2' }}
             </p>
+
+            Bs {{ getGananciaCompraCached(compra.id) | async | number : '1.2-2' }}
           </div>
         </div>
 
@@ -391,6 +393,8 @@
               </td>
               <td class="px-6 py-4 whitespace-nowrap font-bold text-red-600">
                 Bs {{ compra.detalles[0].precioTotal | number : '1.2-2' }}
+                <p> Ganancia   Bs {{ getGananciaCompraCached(compra.id) | async | number : '1.2-2' }}</p>
+                   
               </td>
 
               <td class="px-6 py-4 whitespace-nowrap">
