--- a/src/app/features/matadero/components/matadero-list/matadero-list.html
+++ b/src/app/features/matadero/components/matadero-list/matadero-list.html
@@ -1,6 +1,23 @@
 <div class="min-h-screen bg-white p-4 sm:p-6">
   <div class="max-w-9xl mx-auto">
     <!-- Header -->
+
+    <a [routerLink]="['/compras']" class="flex items-center  py-4 text-black">
+      <svg
+        class="w-5 h-5 mr-2 transform group-hover:-translate-x-1 transition-transform duration-200"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M15 19l-7-7 7-7"
+        ></path>
+      </svg>
+      <span class="text-sm font-medium">Regresar</span>
+    </a>
     <div class="mb-6 sm:mb-8">
       <div
         class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-4 gap-4 sm:gap-0"
@@ -12,7 +29,9 @@
             >
               Matadero
             </h1>
-            <p class="text-sm text-gray-600 mt-1">Listado de registros al matadero por la compra <b>{{codigo()}}</b></p>
+            <p class="text-sm text-gray-600 mt-1">
+              Listado de registros al matadero por la compra <b>{{ codigo() }}</b>
+            </p>
           </div>
         </div>
         <!-- Botones de acción -->
@@ -60,7 +79,6 @@
             <span class="text-gray-600">{{ matadero.fechaFaena | date : 'dd/MM/yyyy' }}</span>
           </div>
           <div class="grid grid-cols-2 gap-3 pt-2 border-t border-gray-100">
-   
             <div>
               <p class="text-xs text-gray-500 mb-1">Cantidad</p>
               <p class="text-sm font-semibold text-gray-900">{{ matadero.cantidad }}</p>
@@ -141,7 +159,7 @@
                 {{ matadero.fechaFaena | date : 'dd/MM/yyyy' }}
               </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ matadero.cantidad }}</td>
-         
+
               <td class="px-6 py-4 whitespace-nowrap">
                 <span class="px-3 py-1 rounded-full text-xs font-bold bg-blue-100 text-blue-700">
                   {{ matadero.tipoRes }}
@@ -276,8 +294,6 @@
             class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#ff7676] focus:border-transparent"
           />
         </div>
-
- 
 
         <!-- Tipo Res -->
         <div class="w-full">
