--- a/src/app/features/venta/components/venta-list/venta.html
+++ b/src/app/features/venta/components/venta-list/venta.html
@@ -1,8 +1,8 @@
 <!-- venta.html -->
-<div class="min-h-screen bg-gradient-to-br from-red-50 via-white to-red-50 py-4 px-2 sm:px-4 lg:px-8">
-    <div class="max-w-8xl mx-auto">
+<div class="min-h-screen bg-gradient-to-br from-red-50 via-white to-red-50 p-4  sm:p-6 ">
+    <div class="max-w-9xl mx-auto">
         <!-- Header -->
-        <div class="bg-[#ff7676] rounded-t-2xl shadow-lg p-4 sm:p-6">
+        <div class="bg-[#ff7676] rounded-t-2xl shadow-lg  sm:p-6">
             <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4">
                 <div class="flex items-center gap-3">
                     <fa-icon [icon]="faShoppingCart" class="w-8 h-8 sm:w-10 sm:h-10 text-white"></fa-icon>
@@ -48,7 +48,7 @@
                         <thead class="bg-gradient-to-r from-gray-50 to-gray-100 border-b border-gray-200">
                             <tr>
                                 @for (col of columns; track col) {
-                                <th class="px-6 py-4 text-left text-xs font-bold text-gray-700 uppercase tracking-wider cursor-pointer"
+                                <th class="px-6 py-4 text-left text-sm font-bold text-gray-700 uppercase tracking-wider cursor-pointer"
                                     (click)="sort(col.key)">
                                     <div class="flex items-center space-x-2">
                                         <span [ngClass]="{
@@ -104,9 +104,7 @@
                                 <td class="px-6 py-4 whitespace-nowrap font-semibold text-blue-600">
                                     {{ v.subtotal | number:'1.2-2' }} Bs.
                                 </td>
-                                <td class="px-6 py-4 whitespace-nowrap font-semibold text-red-600">
-                                    {{ v.descuento | number:'1.2-2' }} Bs.
-                                </td>
+        
                                 <td class="px-6 py-4 whitespace-nowrap font-bold text-green-600">
                                     {{ v.total | number:'1.2-2' }} Bs.
                                 </td>
